[gd_scene load_steps=17 format=2]

[ext_resource path="res://Characters/TestCharacter/Assets/calli_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Characters/TestCharacter/TestCharacter.gd" type="Script" id=2]
[ext_resource path="res://Characters/Shared/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Shared/BulletSpawner.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.605, 0.175, 1.14 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_ensure_correct_normals = true
params_diffuse_mode = 1
params_cull_mode = 2
params_depth_draw_mode = 1
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 1 )
ao_enabled = true
ao_light_affect = 0.0
ao_on_uv2 = false
ao_texture_channel = 0
transmission_enabled = true
transmission = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=15]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.857143
loop = true
step = 0.142857
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 277, 114 )
states/Run/node = SubResource( 6 )
states/Run/position = Vector2( 589, 114 )
transitions = [ "Idle", "Run", SubResource( 7 ), "Run", "Idle", SubResource( 8 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 1.08064, 1 )

[node name="Calliope" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
collision/safe_margin = 1.0
script = ExtResource( 2 )
dex = 1.4
weap_damage_min = 5
weap_damage_max = 15

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.047211, 0 )
shape = SubResource( 11 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )
material_override = SubResource( 13 )
material_overlay = SubResource( 15 )
generate_lightmap = false
billboard = 1
shaded = true
texture = ExtResource( 1 )
hframes = 10
vframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite3D")
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 10 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.02493, 0, 0, 0, 1, 0, 0, 0, 0.650145, 0, 0, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" parent="HitBox" index="0"]
transform = Transform( 0.643798, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 12 )

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform( 1.6, 0, 0, 0, -6.99382e-08, -1.6, 0, 1.6, -6.99382e-08, 0, -1.18144, 0 )
modulate = Color( 0, 0, 0, 1 )
shaded = true
alpha_cut = 2

[node name="Spawner" parent="." instance=ExtResource( 4 )]
spread_angle = 0.0
bullet_speed_override = 50.0

[node name="ShootTimer" type="Timer" parent="."]

[node name="TurretGroup" type="Node" parent="."]

[node name="AbilityCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="AbilityCooldown" to="." method="_on_AbilityCooldown_timeout"]

[editable path="HitBox"]
[editable path="Spawner"]
